# work_place

./: .gitignore  CSV_Agent_Experience_Memory_问题总结.md  README.md  env_win.yml  pip_req.txt
Agent-Experience-Memory/: README.md  docker-compose.yml  requirements.txt  start.sh  start_experience_memory.sh  中文实习简历项目描述.md
Agent-Experience-Memory/cpp_memory_service/: CMakeLists.txt
Agent-Experience-Memory/cpp_memory_service/include/: vector_index.h
Agent-Experience-Memory/cpp_memory_service/src/: main.cpp  vector_index.cpp
Agent-Experience-Memory/docs/: api.md  architecture.md  design.md
Agent-Experience-Memory/examples/: demo_with_memory.md  demo_without_memory.md
Agent-Experience-Memory/mysql/: schema.sql
Agent-Experience-Memory/python_client/: __init__.py  api_service.py  config.py  db.py  demo_api_search.py  demo_record_error.py  demo_search.py  embedding.py  error_collector.py  experience_store.py  load_cpp_index.py  memory_client.py  seed_data.py
CSV-Insight-Agent-master/: .env.example  .gitignore  README.md  app.py  main.py  requirements.txt  总结.md  面试.md
CSV-Insight-Agent-master/docs/: csv-insight-agent-fit-analysis.md  experience_memory_integration.md  langchain-agent-loop-refactor-plan.md
CSV-Insight-Agent-master/examples/: sales.csv  students.csv
CSV-Insight-Agent-master/memory/: chart_preference.json
CSV-Insight-Agent-master/src/: config.py  experience_memory_adapter.py
CSV-Insight-Agent-master/tests/: test_chart_plot_skill.py  test_csv_profile_skill.py  test_graph_routing.py  test_langchain_agent.py  test_langchain_tools.py  (+6 more)
(+43 files in other folders)
